2003-06-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Split the handling
	of ASSIGNMENT_OPERATOR and ASSIGNMENT_OPERATORS
	into two rules. This makes the var assignment
	simpler since the code does not need to
	inspect the matched tokens to determine what
	kind of access it was.

2003-06-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Insert both
	a read xref and a write xref for variable
	operations like $var+=1.
	* tests/parsers/php.test: Remove knownbug
	constraint from var-5.6 since it now passes.
	Fixup operator-1.3 since both read and write
	xrefs are now being inserted.

2003-06-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add support
	for variable pre and post increment
	and decrement operators. Move the logic
	in the variable assignment block into a
	helper function named emit_var_access.
	Invoke this method from the new pattern
	that will match a variable increment
	and decrement tokens.
	* tests/parsers/php.test: Add token
	parsing tests for increment operators.
	Check that xrefs are being generated
	properly for increment operators.

2003-06-05  John Lash  <jlash@speakeasy.net>

	* gui/editorpane.tcl (EditFile): Remove
	gnudoit as string to match external editor on.
	* gui/emacs.tcl (sn_ensure_emacs_running):
	gnudoit	is deprecated, change call to "gnudoit"
	to "gnuclient -batch -eval". Remove other
	places where the string gnudoit appears.

2003-06-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/emacs.tcl (sn_ensure_emacs_running):
	Invoke sn_unset_tmp_dir before running gnudoit
	and invoke sn_set_tmp_dir when finished. This
	avoids a problem that was causing gnudoit to
	fail because it was not finding unix domain
	sockets when the TMPDIR environment variable
	was set to .snprj instead of /tmp.
	* gui/misc.tcl (sn_unset_tmp_dir): Add helper